# TestFrameworkBase

./: pyproject.toml
src/test_framework_base/: test_framework.py
src/test_framework_base/hardware/printers/: __init__.py  printer_interface.py
src/test_framework_base/hardware/printers/vendorA/: __init__.py  device_ayz.py
src/test_framework_base/hardware/printers/vendorB/: deviceXXA.py
