[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Needed for usign repos directly
[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "test_framework_base"
version = "0.0.1"
authors = [
  { name="Aurimas Kudarauskas"},
]

dependencies = [
  "pytest"
]

description = "A package that acts as base of test framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
test_framework= "test_framework.bin.test_framework:main"

[project.optional-dependencies]
vendorA = ["Vendor_A@git+https://github.com/aurimas-kudarauskas/TestFrameworkVendorA",]
vendorB = ["Vendor_B@git+https://github.com/aurimas-kudarauskas/TestFrameworkVendorB",]